src/test/ui/issues/issue-25700.stderr
error[E0382]: use of moved value: `t`
  --> $DIR/issue-25700.rs:13:10
   |
LL |     drop(t);
   |          - value moved here
LL |     drop(t); //~ ERROR use of moved value
   |          ^ value used here after move
   |
   = note: move occurs because `t` has type `S<()>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
